2007-03-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-03-16  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/bootloader.py:  Increase writePriority number
	so this comes after upgrade/install.

2007-03-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart/base.py (BaseHandler._setCommand):  Treat class names as
	unicode strings so lower() works in all locales (#231053).

2007-03-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-03-07  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/timezone.py:  The timezone command didn't
	understand --isUtc before FC6 (#231189).

	* pykickstart/parser.py (KickstartParser._stateMachine):  Recognize
	%ksappend so ksvalidator works.

	* po/:  Update translation files.

2007-03-01  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/bootloader.py, pykickstart/commands/clearpart.py,
	pykickstart/commands/displaymode.py, pykickstart/commands/firewall.py,
	pykickstart/commands/firstboot.py, pykickstart/commands/langsupport.py,
	pykickstart/commands/logging.py, pykickstart/commands/reboot.py,
	pykickstart/commands/selinux.py, pykickstart/commands/upgrade.py:
	Don't set default values so a newly created kickstart handler object
	will only have the values set by a caller.

2007-02-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/updates.py:  Added a new updates command for
	grabbing updates.img files.
	* pykickstart/commands/__init__.py:  Pull in new command object.
	* pykickstart/handlers/control.py:  Add new command to F7 map.

	* pykickstart/commands/raid.py (F7_Raid):  Add support for RAID10.

2007-02-26  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-02-26  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/device.py (FC3_Device):  Fix device command
	syntax to match anaconda's documentation.
